--- a/discord/src/App.css
+++ b/discord/src/App.css
@@ -5,6 +5,10 @@
 }
 .back{
   height: 100vh;
-  background: linear-gradient(to bottom,#5f5f5f,#afafaf,#585858);
+  background-color: rgb(248, 192, 253);
   position: relative;
+  overflow: hidden;
+}
+h4{
+  opacity: 0.5;
 }
